force-app/main/default/objects/aig_AI_Use_Case_Endpoint__c/aig_AI_Use_Case_Endpoint__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Endpoint</label>
    <nameField>
        <displayFormat>END-{000000}</displayFormat>
        <label>AI Use Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Endpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>