force-app/main/default/objects/aig_AI_Use_Case_Endpoint__c/fields/aig_Access_Control__c.field-meta.xml
<CustomField>
    <fullName>aig_Access_Control__c</fullName>
    <inlineHelpText>Information about who has access to the endpoint within this specific use case.</inlineHelpText>
    <label>Access Control</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>