force-app/main/default/objects/aig_AI_Use_Case_Endpoint__c/fields/aig_AI_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Endpoint__c</fullName>
    <label>AI Endpoint</label>
    <referenceTo>aig_AI_Endpoint__c</referenceTo>
    <relationshipLabel>AI Use Case Endpoints</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Endpoints</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>