force-app/main/default/objects/aig_AI_Use_Case_Endpoint__c/fields/aig_Endpoint_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>aig_Endpoint_Approval_Status__c</fullName>
    <label>Endpoint Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>✅ Approved for Use Case</fullName>
            </value>
            <value>
                <fullName>⛔ Not Approved for Use</fullName>
            </value>
            <value>
                <fullName>✘ Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>